--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "@playwright/test": "^1.28.1",
     "@skeletonlabs/skeleton": "2.9.0",
     "@skeletonlabs/tw-plugin": "0.3.1",
-    "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.10",
     "@tauri-apps/cli": "^1.5.10",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/svelte": "^4.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/eslint": "^8.56.0",
     "@types/node": "20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -34,6 +36,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "jsdom": "^24.0.0",
     "postcss": "8.4.35",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
