--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@testing-library/svelte": "^4.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/eslint": "^8.56.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
